--- a/documentation/toc.html
+++ b/documentation/toc.html
@@ -29,6 +29,16 @@
                     </ul>
                 </li>
                 <li>
+                    <span class="expand-stub"></span>
+                    <a href="tutorials.html" name="" title="Tutorials">Tutorials</a>
+                    
+                    <ul class="nav level2">
+                          <li>
+                              <a href="tutorials/use-under-unity.html" name="" title="Use under Unity 3D">Use under Unity 3D</a>
+                          </li>
+                    </ul>
+                </li>
+                <li>
                     <a href="../RELEASE_NOTES.html" name="" title="Release Notes">Release Notes</a>
                 </li>
           </ul>
