--- a/index.html
+++ b/index.html
@@ -95,13 +95,14 @@
 <p><em>QuikGraph was originally created by Jonathan &quot;Peli&quot; de Halleux in 2003 and named QuickGraph.</em></p>
 <p>It was then updated to become YC.QuickGraph.</p>
 <p><strong>This version</strong> of QuickGraph, renamed <strong>QuikGraph</strong>, is a fork of YC.QuickGraph, and I tried to clean the library to provide it as a clean NuGet packages using modern C# development (.NET Core).</p>
-<p>The plan is to to fully clean, fix issues of the original library and all its non Core parts, and improve it.</p>
+<p>The plan is to to fully clean, fix issues of the original library and all its non Core parts, and improve it. It also has a wide support of .NET targets to make it compatible with the most development environments.</p>
 <p>You can find library sources on <a href="https://github.com/KeRNeLith/QuikGraph">GitHub</a>.</p>
 <h2 id="targets">Targets</h2>
 <ul>
 <li>.NET Standard 1.3+</li>
 <li>.NET Core 1.0+</li>
 <li>.NET Framework 3.5+</li>
+<li>Works under <a href="https://github.com/KeRNeLith/QuikGraph/wiki/Unity3D-Integration">Unity 3D</a></li>
 </ul>
 <p>Supports Source Link</p>
 <h2 id="packages">Packages</h2>
