--- a/RELEASE_NOTES.html
+++ b/RELEASE_NOTES.html
@@ -69,14 +69,28 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="release-notes">Release notes</h1>
 
+<h2 id="whats-new-in-231-august-30-2021">What's new in 2.3.1 August 30 2021</h2>
+<h3 id="quikgraphgraphviz">QuikGraph.Graphviz</h3>
+<h4 id="fixes">Fixes:</h4>
+<ul>
+<li>Properly treat common vertex format when converting a graph to Graphviz.</li>
+</ul>
+<h4 id="updates">Updates:</h4>
+<ul>
+<li>Label has priority if set over Record on GraphvizVertex.</li>
+</ul>
+<h4 id="new">New:</h4>
+<ul>
+<li>Add support of HTML labels.</li>
+</ul>
 <h2 id="whats-new-in-230-february-4-2021">What's new in 2.3.0 February 4 2021</h2>
 <h3 id="quikgraph">QuikGraph</h3>
-<h4 id="fixes">Fixes:</h4>
+<h4 id="fixes-1">Fixes:</h4>
 <ul>
 <li>Fix the serialization implementation of UndirectedGraph, ArrayUndirectedGraph and UndirectedBidirectionalGraph.</li>
 <li>Fix A* implementation to also compute cost on tree edge.</li>
 </ul>
-<h4 id="updates">Updates:</h4>
+<h4 id="updates-1">Updates:</h4>
 <ul>
 <li>Remove some serializable attributes from algorithms and predicates classes (homognization).</li>
 <li>Remove serializable attributes from delegate graphs implementations.</li>
@@ -84,7 +98,7 @@
 <li>CompressedSparseRowGraph also implements IEdgeListGraph interface.</li>
 <li>EquateGraphs.Equate helpers now supports a wider range of graph comparisons.</li>
 </ul>
-<h4 id="new">New:</h4>
+<h4 id="new-1">New:</h4>
 <ul>
 <li>Add the IDistancesCollection to interface the distance information retrieval from shortest path algorithms. Legacy accesses to distances are marked as obsolete.</li>
 </ul>
@@ -93,42 +107,42 @@
 <li>Remove the dependency to System.Collections.NonGeneric for .NET Standard 1.3 target.</li>
 </ul>
 <h3 id="quikgraphserialization">QuikGraph.Serialization</h3>
-<h4 id="updates-1">Updates:</h4>
-<ul>
-<li>Update package dependencies.</li>
-</ul>
-<h3 id="quikgraphgraphviz">QuikGraph.Graphviz</h3>
 <h4 id="updates-2">Updates:</h4>
 <ul>
 <li>Update package dependencies.</li>
 </ul>
-<h4 id="new-1">New:</h4>
-<ul>
-<li>Make all Dot structures serializable.</li>
-</ul>
-<h3 id="quikgraphdata">QuikGraph.Data</h3>
+<h3 id="quikgraphgraphviz-1">QuikGraph.Graphviz</h3>
 <h4 id="updates-3">Updates:</h4>
 <ul>
 <li>Update package dependencies.</li>
 </ul>
-<h3 id="quikgraphmsagl">QuikGraph.MSAGL</h3>
-<h4 id="fixes-1">Fixes:</h4>
+<h4 id="new-2">New:</h4>
 <ul>
-<li>Update reference to AutomaticGraphLayout packages in order to fix assembly strong naming issues.</li>
+<li>Make all Dot structures serializable.</li>
 </ul>
+<h3 id="quikgraphdata">QuikGraph.Data</h3>
 <h4 id="updates-4">Updates:</h4>
 <ul>
 <li>Update package dependencies.</li>
 </ul>
-<h3 id="quikgraphpetri">QuikGraph.Petri</h3>
+<h3 id="quikgraphmsagl">QuikGraph.MSAGL</h3>
+<h4 id="fixes-2">Fixes:</h4>
+<ul>
+<li>Update reference to AutomaticGraphLayout packages in order to fix assembly strong naming issues.</li>
+</ul>
 <h4 id="updates-5">Updates:</h4>
+<ul>
+<li>Update package dependencies.</li>
+</ul>
+<h3 id="quikgraphpetri">QuikGraph.Petri</h3>
+<h4 id="updates-6">Updates:</h4>
 <ul>
 <li>Update package dependencies.</li>
 </ul>
 <hr>
 <h2 id="whats-new-in-222-july-18-2020">What's new in 2.2.2 July 18 2020</h2>
 <h3 id="quikgraphserialization-1">QuikGraph.Serialization</h3>
-<h4 id="fixes-2">Fixes:</h4>
+<h4 id="fixes-3">Fixes:</h4>
 <ul>
 <li>Add the possibility to use a custom binder during binary serialization to control deserialized types.</li>
 <li>Undirected graphs are now serializable to XML.</li>
@@ -136,7 +150,7 @@
 <hr>
 <h2 id="whats-new-in-221-june-19-2020-and-june-25-2020">What's new in 2.2.1 June 19 2020 and June 25 2020</h2>
 <h3 id="quikgraphserialization-2">QuikGraph.Serialization</h3>
-<h4 id="fixes-3">Fixes:</h4>
+<h4 id="fixes-4">Fixes:</h4>
 <ul>
 <li>Rely on embedded GraphML xsd to validate GraphML graphs during serialization (avoid issues when GraphML website is down).</li>
 </ul>
@@ -145,17 +159,17 @@
 <hr>
 <h2 id="whats-new-in-220-june-7-2020-june-11-2020-june-18-2020-and-june-25-2020">What's new in 2.2.0 June 7 2020, June 11 2020, June 18 2020 and June 25 2020</h2>
 <h3 id="quikgraph-1">QuikGraph</h3>
-<h4 id="new-2">New:</h4>
-<ul>
-<li>Use signing key to strong name library assemby.</li>
-</ul>
-<h3 id="quikgraphserialization-3">QuikGraph.Serialization</h3>
 <h4 id="new-3">New:</h4>
 <ul>
 <li>Use signing key to strong name library assemby.</li>
 </ul>
-<h3 id="quikgraphgraphviz-1">QuikGraph.GraphViz</h3>
+<h3 id="quikgraphserialization-3">QuikGraph.Serialization</h3>
 <h4 id="new-4">New:</h4>
+<ul>
+<li>Use signing key to strong name library assemby.</li>
+</ul>
+<h3 id="quikgraphgraphviz-2">QuikGraph.GraphViz</h3>
+<h4 id="new-5">New:</h4>
 <ul>
 <li>Use signing key to strong name library assemby.</li>
 </ul>
@@ -168,7 +182,7 @@
 </ul>
 <h3 id="quikgraphmsagl-1">QuikGraph.MSAGL</h3>
 <p>Migrate the library from GLEE to <a href="https://www.microsoft.com/en-us/research/project/microsoft-automatic-graph-layout">MSAGL</a> (MSAGL is the successor of GLEE).</p>
-<h4 id="fixes-4">Fixes:</h4>
+<h4 id="fixes-5">Fixes:</h4>
 <ul>
 <li>Fix typo in populator algorithm.</li>
 <li>Fix a bug when converting undirected graph to MSAGL graph.</li>
@@ -184,11 +198,11 @@
 <li>Use JetBrains annotations all over the library as much as possible.</li>
 </ul>
 <h3 id="quikgraphpetri-2">QuikGraph.Petri</h3>
-<h4 id="fixes-5">Fixes:</h4>
+<h4 id="fixes-6">Fixes:</h4>
 <ul>
 <li>Fix PetriNetSimulator with possible collection modified while enumerating.</li>
 </ul>
-<h4 id="updates-6">Updates:</h4>
+<h4 id="updates-7">Updates:</h4>
 <ul>
 <li>Really make IPetriNet immutable to enforce the difference with IMutablePetriNet.</li>
 </ul>
@@ -204,8 +218,8 @@
 </ul>
 <hr>
 <h2 id="whats-new-in-211-june-6-2020">What's new in 2.1.1 June 6 2020</h2>
-<h3 id="quikgraphgraphviz-2">QuikGraph.GraphViz</h3>
-<h4 id="new-5">New:</h4>
+<h3 id="quikgraphgraphviz-3">QuikGraph.GraphViz</h3>
+<h4 id="new-6">New:</h4>
 <ul>
 <li>Add support of PenWidth property for vertex, edge and graph.</li>
 <li>Add support of Splines property for graph.</li>
@@ -217,29 +231,29 @@
 <ul>
 <li>Use EqualityComparer&lt;T&gt; instead of non-generic object.Equals.</li>
 </ul>
-<h4 id="updates-7">Updates:</h4>
+<h4 id="updates-8">Updates:</h4>
 <ul>
 <li>Cancellation of algorithm internally use exception to abort algorithm run.</li>
 </ul>
 <h3 id="quikgraphserialization-4">QuikGraph.Serialization</h3>
-<h4 id="fixes-6">Fixes:</h4>
+<h4 id="fixes-7">Fixes:</h4>
 <ul>
 <li>Fix a security vulnerability regarding XML serialization on target .NET Framework 3.5.</li>
 </ul>
-<h3 id="quikgraphgraphviz-3">QuikGraph.GraphViz</h3>
+<h3 id="quikgraphgraphviz-4">QuikGraph.GraphViz</h3>
 <p>Rework the original QuickGraph.Graphviz module into QuikGraph.Graphviz. This make possible to use the QuikGraph to Dot bridge.</p>
-<h4 id="fixes-7">Fixes:</h4>
+<h4 id="fixes-8">Fixes:</h4>
 <ul>
 <li>Fix the floating points formatting when converted to Dot (Invariant culture).</li>
 <li>Fix some implementation issues accross the library.</li>
 <li>Fix labels, comments, tooltips, records and ports escaping.</li>
 <li>Fix a lot of graph to Dot conversions issues (wrong properties, invalid formatting, typo, etc).</li>
 </ul>
-<h4 id="updates-8">Updates:</h4>
+<h4 id="updates-9">Updates:</h4>
 <ul>
 <li>Add all color representations equivalent to System.Drawing.Color or System.Windows.Media.Color to GraphvizColor.</li>
 </ul>
-<h4 id="new-6">New:</h4>
+<h4 id="new-7">New:</h4>
 <ul>
 <li>Add conversion extensions from System.Drawing.Font to GraphvizFont (and vice versa).</li>
 </ul>
@@ -262,7 +276,7 @@
 <li>QuikGraph</li>
 <li>QuikGraph.Serialization</li>
 </ul>
-<h4 id="new-7">New:</h4>
+<h4 id="new-8">New:</h4>
 <ul>
 <li>Add struct based edge implementations that were in original QuickGraph (STaggedEdge, STaggedUndirectedEdge and SEquatableTaggedEdge).</li>
 </ul>
@@ -274,7 +288,7 @@
 <p>Serialization features extracted from core package.</p>
 <hr>
 <h2 id="whats-new-in-101-january-20-2020">What's new in 1.0.1 January 20 2020</h2>
-<h3 id="fixes-8">Fixes:</h3>
+<h3 id="fixes-9">Fixes:</h3>
 <ul>
 <li>Properly deal with isolated vertices for transitive reduction algorithm.</li>
 <li>Properly deal with isolated vertices for transitive closure algorithm.</li>
